v1.6
	+ Album mode, additional details in library views
	+ Real-time searching of library (search as you type)
	+ Fullscreen artwork covers mode (via right-click on artwork) (mips)
	+ Show file path in tooltip for library search results
	+ DND to copy files from Sonata to a file manager (Kamil)
	+ Ability to show path in tag editing window
	+ Use plchanges for faster performance of some actions (e.g. add to playlist)
	+ Only minimize to tray on trayicon click if focused; raise if not focused
	+ Use new 'listplaylists' command for retrieving playlists
	+ Better error trapping
	+ Make process name 'sonata' for linux (himdel)
	+ Bug: Bad profiles prevent sonata from starting
	+ Bug: Error for cli arguments when sonata can't connect to MPD (Juan)

v1.5.3
	+ Quick link to edit lyrics through LyricWiki
	+ Unicode lyrics and better searching with LyricWiki (orivej)
	+ Store audioscrobbler password as md5 hash
	+ Add Greek translation (Lazaros)
	+ Bug: Fix lost connection when hard drive is spun down
	+ Bug: Fix non-ascii characters when scrobbling with non-utf8 locale
	+ Bug: Selected item changed on double-click
	+ Bug: Use consistent behavior for titlebar
	+ Bug: Prevent bad cover image files from causing problems
	+ Bug: Don't sort library search results
	+ Bug: Ensure image filenames are escaped in search routine

v1.5.2 - June 5, 2008
	+ Improved artwork/lyrics caching through case-insenstive searching
	+ Add Turkish translation (Gökmen)
	+ Bug: Fix artwork for files with unicode characters
	+ Bug: Fix crash if mpd library is empty
	+ Bug: Fix regression where dbus-python became required
	+ Bug: Bold titles lose sync if song changes with visible filterbar
	+ Bug: Doesn't scrobble when same song is repeated
	+ Bug: Python conflict when installed with sugar (OLPC)
	+ Bug: Fix artwork display in song notification window for RTL languages
	+ Bug: Fix progressbar seeking for RTL languages
	+ Bug: No play/pause indicator in egg tray icon if started while mpd is active
