@@ -165,7 +165,7 @@
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Alt-Up</b>: Collapse player<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-H</b>: Search library<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-Q</b>: Quit<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-U</b>: Update entire library<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-Shift-U</b>: Update entire library<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Menu</b>: Display popup menu<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Escape</b>: Minimize to system tray (if enabled)<br/>
 			
@@ -191,7 +191,7 @@
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-D</b>: Add selected song(s) or directory(s)<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-R</b>: Replace with selected song(s) or directory(s)<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-T</b>: Edit selected song's tags<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-Shift-U</b>: Update library for selected path(s)<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-U</b>: Update selected item(s)/path(s)<br/>
 			
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>Playlist Shortcuts</u>:<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Enter/Space</b>: Add selected playlist(s)<br/>
